# ImagoRef

./: .gitignore  CMakeLists.txt  Info.desktop.in  Info.plist.in  README.md  floatingtoolbar.cpp  floatingtoolbar.h  mainwindow.cpp  mainwindow.h  resources.rc  settingsdialog.cpp  settingsdialog.h  themes.qrc
.github/workflows/: build-and-release.yml  linux-build.yml  macos-arm-build.yml  macos-build.yml  macos-intel-build.yml  release.yml  windows-build.yml
docs/: CONTRIBUTING.md  ImagoRef_Documentation.md  LICENSE.md  NOTICE.md  README.md  spravka_po_kodu.md
packs/: Info.plist.in  resources.rc
res/: resources.qrc
res/app_icon/: icon.icns
res/themes/: aquamarine.qss  blue.qss  dark.qss  green.qss  imago.qss  light.qss  orange.qss  pink.qss  purple.qss
res/themes/dark/: theme.json
res/themes/imago/: theme.json
res/themes/light/: theme.json
src/: canvasview.cpp  canvasview.h  imageitem.cpp  imageitem.h  main.cpp
src/app/: mainwindow.cpp  mainwindow.h  undocommands.cpp  undocommands.h
src/backend/: BoardController.cpp  BoardController.h  ImageItemModel.cpp  ImageItemModel.h  SettingsManager.cpp  ThemeManager.cpp  ThemeManager.h  UndoCommands.cpp  UndoCommands.h
src/control/: BaseTool.cpp  BaseTool.h
src/control/tools/: DeleteTool.cpp  DeleteTool.h  GridSnapTool.cpp  GridSnapTool.h  PasteTool.cpp  PasteTool.h  ResizeTool.cpp  ResizeTool.h  RotateTool.cpp  RotateTool.h  UndoRedoTool.cpp  ZoomTool.cpp  ZoomTool.h
src/controllers/: AuthController.cpp  AuthController.h  BoardController.cpp  BoardController.h  ClipboardController.cpp  ClipboardController.h  CloudBoardsManager.cpp  CloudBoardsManager.h  CloudController.cpp  CloudController.h  FileController.cpp  FileController.h  NetworkController.cpp  NetworkController.h  SelectionController.cpp  SelectionController.h  StackController.cpp  StackController.h  StorageController.cpp  StorageController.h  SyncController.cpp  SyncController.h  ToolController.cpp  ToolController.h  UpscaleController.cpp  UpscaleController.h
src/graphics/: canvasview.cpp  canvasview.h  imageitem.cpp  imageitem.h
src/managers/: BoardsManager.cpp  BoardsManager.h  CacheManager.cpp  CacheManager.h  ModelsManager.cpp  ModelsManager.h  SettingsManager.cpp  SettingsManager.h  ThemesManager.cpp  ThemesManager.h
src/models/: ImageModel.cpp  ImageModel.h  ImageProvider.cpp  ImageProvider.h
src/qml/: Main.qml  MainWindow.qml  SettingsWindow.qml  WelcomeWindow.qml
src/qml/components/: CanvasView.qml  ColorPalettePanel.qml  CropOverlay.qml  EyedropperOverlay.qml  FloatingToolbar.qml  ImageItem.qml  ImagoToolButton.qml  ResizeHandles.qml  ResizeOverlay.qml  ToolbarButton.qml
src/qml/windows/: MainWindow.qml  SettingsWindow.qml  WelcomeWindow.qml
src/ui/managers/: AnimationManager.cpp  AnimationManager.h  SettingsManager.cpp  SettingsManager.h  StackManager.cpp  StackManager.h  ThemeManager.cpp  ThemeManager.h
src/ui/widgets/: CanvasView.cpp  CanvasView.h  FloatingToolbar.cpp  FloatingToolbar.h  ImageItem.cpp  ImageItem.h
src/ui/windows/: MainWindow.cpp  MainWindow.h  SettingsWindow.cpp  WelcomeWindow.cpp  WelcomeWindow.h
src/widgets/: floatingtoolbar.cpp  floatingtoolbar.h  settingsdialog.cpp  settingsdialog.h
themes/: dark.qss  light.qss
